# TailorUsage

./: AGENTS.md  HOW_TO_DISTRIBUTE.md  OPENCODE_PROXY_WORKLOG.md  SIGNING.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
scripts/: release.sh
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/proxy/: config_writer.rs  logger.rs  mod.rs  server.rs  sse_parser.rs  types.rs  upstream.rs
src/components/: AuthScreen.test.tsx  AuthScreen.tsx  Footer.test.tsx  Footer.tsx  PopoverPanel.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  UsageLimitsBar.test.tsx  UsageLimitsBar.tsx
src/components/charts/: ModelBar.tsx  Sparkline.tsx
src/components/sections/: ProxyToggle.tsx  RealtimeSection.test.tsx  RealtimeSection.tsx  TodaySection.tsx  WeekSection.test.tsx  WeekSection.tsx
src/hooks/: useAuth.ts  usePolling.test.tsx  usePolling.ts
src/lib/: api.ts  cost.ts  format.ts  logs.test.ts  logs.ts  types.ts  usage.ts
src/store/: index.ts
