[package]
name = "tailor-usage"
version = "0.4.2"
description = "Mac menu bar app for Tailor usage metrics"
authors = ["you"]
edition = "2021"

[lib]
name = "tailor_usage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["cookies", "rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
http-body-util = "0.1"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
log = "0.4"
